# apim-cpp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PROBLEMS.md  README.md  TODO.md
APIM-CPP-CLIENT/: Invoke-DemoRequests.ps1
APIM-CPP-CLIENT/web/: Start-WebDemo.ps1  checklist-portal.html  index.html  portal.html  portal_checklist.html  portal_data.html  portal_testing.html
APIM-CPP-CLIENT/web/pythonPortal/: README.md  flaskChecklistPortal.html  flaskChecklistPortalExample.md.html  flaskChecklistPortalSample.md.html  flaskOverviewPortal.html  sample.md
docs/: mcp_tools.md
docs/design/: address_id_plan.md  apim_checklist_specification.md  captcha_plan.md  indicator_plan.md  principles.md  python_portal_plan.md  schema_normalization_plan.md  unit_tests.md
scripts/: run_tests.ps1
src/core/: app.cpp  app.hpp  checklist_markdown.cpp  checklist_markdown.hpp  checklist_store.cpp  checklist_store.hpp  logging.cpp  logging.hpp  main.cpp  mcp_bridge.cpp  mcp_bridge.hpp
src/platform/: http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp
src/tools/: apim_mcp_bridge.cpp
tests/: integration_schema_test.cpp  mcp_bridge_test.cpp
